<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2011 by Alexandre Jasmin <alexandre.jasmin@gmail.com>

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
-->

<resources>
    <string name="app_name">Telus usage summary widget</string>
    <string name="widget_name">Telus usage summary</string>

    <string name="widget_title">TELUS USAGE</string>

    <string name="how_to_add">
        &lt;p&gt;This is not an application but a &lt;i&gt;Widget&lt;/i&gt;&amp;nbsp;that can be added to your home screen. In order to add it:&lt;/p&gt;
        &lt;p&gt;\u2022 Long press the home screen background to open the &lt;i&gt;\"Add to home screen\"&lt;/i&gt;&amp;nbsp;&amp;nbsp;menu&lt;/p&gt;
        &lt;p&gt;\u2022 From this menu select:&lt;br&gt;
        &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;Widgets&lt;br&gt;
        &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;Telus Usage Summary&lt;/p&gt;
        &lt;p&gt;\u2022 Enter your Telus account details&lt;/p&gt;
        &lt;b&gt;Video Demonstration:&lt;/b&gt;&lt;br&gt;
    </string>
    <string name="how_to_add_14">
        &lt;p&gt;This is not an application but a &lt;i&gt;Widget&lt;/i&gt;&amp;nbsp;that can be dragged to your home screen.&lt;/p&gt;
        &lt;p&gt;Note: &lt;i&gt;Due to an issue with the current release of Android 4.0 you may have to reboot your device before the widget appears the list.&lt;/i&gt;&lt;/p&gt;
        &lt;b&gt;Video Demonstration:&lt;/b&gt;&lt;br&gt;
    </string>
    <string name="return_to_home_screen">Return to Home Screen</string>

    <!-- Smart phone layout -->
    <string name="voice_label">\u2022 MINUTES</string>
    <string name="airtime_remaining">%1$s/%2$s left</string>
    <string name="airtime_chargeable">Charged: %s</string>
    <string name="data_label">\u2022 DATA</string>
    <string name="text_label">\u2022 TEXT</string>

    <!-- Calling cards layout -->
    <string name="current_balance_label">\u2022 BALANCE</string>
    <string name="balance_expires_label">\u2022 EXPIRES</string>

    <!-- Loading -->
    <string name="loading_title">LOADING</string>
    <string name="loading_message">Fetching Data&#8230;</string>

    <!-- Messages -->
    <string name="widget_network_error">Error.\n\nUnable to connect</string>
    <string name="widget_network_error_tap">Tap to retry now</string>
    <string name="widget_invalid_credentials_error">Invalid email or password</string>
    <string name="widget_invalid_credentials_tap">Tap to change</string>
    <string name="widget_parse_credentials_error">Unable to display your usage data.</string>
    <string name="widget_parse_credentials_tap">Tap for more info</string>

    <!-- Configure Activity -->
    <string name="enter_credentials">Enter the email address and password that you use to log on to the Telus Mobility website.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="small_print">Your email address and password are never sent to the widget author.&lt;br&gt;&lt;br&gt;The widget will fetch and display data from &lt;a href=\"http://mobile.telus.com\"&gt;mobile.telus.com&lt;/a&gt;. Data from that website may not always be up to date.&lt;br&gt;&lt;br&gt;Changes to the Telus website may prevent the widget from working correctly. Installing updates from the Android Market may resolve such issues.</string>
    <string name="add_widget">Add Widget</string>
    <string name="configure_loading">Fetching Data&#8230;</string>
    <string name="unable_to_add_widget">Unable to add the widget</string>
    <string name="invalid_credentials">The email or password don\'t match.</string>
    <string name="network_error">Network error</string>
    <string name="parsing_error">There was an error</string>
    <string name="pick_phone_number">Pick phone number</string>

    <!-- ReportAccountErrorActivity -->
    <string name="report_account_error">The data from your Telus account page was not recognized. This is probably because the widget author didn\'t have access to an usage report of this type or because Telus changed its site.\n\nYou can choose to securely send the information displayed below to the widget author to help improve this widget. The widget author promises not to misuse or disclose information contained in this report.\n\nScroll down to accept.</string>
    <string name="i_agree_to_send">I agree to send the information above to the widget author through a secure HTTPS connection.</string>
    <string name="cancel">Cancel</string>
    <string name="send_data">Send the information above</string>
    <string name="sending_data">Sending data&#8230;</string>
    <string name="unable_to_send_data">Unable to send data</string>
    <string name="report_sent">Report sent</string>
    <string name="okay">Okay</string>



    <string name="not_configured">Not configured</string>
    <string name="tap">Tap</string>
    <string name="widget_service_unavailable">Service unavailable</string>
    
    <string name="unlimited">Unlimited</string>
</resources>
