<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 by Alexandre Jasmin <alexandre.jasmin@gmail.com>
    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to
    deal in the Software without restriction, including without limitation the
    rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
    sell copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions: The above copyright
    notice and this permission notice shall be included in all copies or substantial
    portions of the Software. THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY
    OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
    OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
    DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
    DEALINGS IN THE SOFTWARE. -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:baselineAligned="false">

		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="0dp" android:layout_weight="1"
		    android:orientation="vertical">
		    <TextView android:text="@string/enter_credentials"
		        android:id="@+id/textView1" android:layout_width="wrap_content"
		        android:layout_height="wrap_content" android:layout_margin="5dp" />
		    <EditText android:id="@+id/email"
		        android:layout_height="wrap_content" android:layout_width="fill_parent"
		        android:hint="@string/email_address" android:inputType="textEmailAddress"></EditText>
		    <EditText android:id="@+id/password"
		        android:layout_height="wrap_content" android:layout_width="fill_parent"
		        android:hint="@string/password" android:inputType="textPassword"></EditText>
		</LinearLayout>
		
		<TextView android:id="@+id/small_print_text"
		    android:layout_width="wrap_content" android:layout_height="wrap_content"
		    style="@style/Text.SmallPrint" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"
		    android:layout_marginBottom="12dp"/>

        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="54dip" android:background="@android:drawable/bottom_bar">
            <Button android:text="@string/add_widget" android:id="@+id/add_button"
                android:layout_width="150dp" android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
